--- a/magisterska_timotej_gaspar.tex
+++ b/magisterska_timotej_gaspar.tex
@@ -110,6 +110,8 @@ The thesis addresses ...
 %*********************** PA10 ********************************
 \chapter{Robotski manipulator Mitsubishi PA10} \label{pa10}
 
+Celotno delo, ki je bilo opravljeno pred pisanjem tega dela je bilo narejeno na robotskem mehanizmu PA10
+
 \begin{enumerate}
 
 \item 
@@ -162,20 +164,16 @@ The thesis addresses ...
 
 
 \appendix
-\chapter{Urejanje dokumentov z orodjem LaTex} \label{dodatekA}
+\chapter{Appendix 1} \label{dodatekA}
+\chapter{Appendix 2} \label{dodatekB}
+\chapter{Appendix 3} \label{dodatekC}
+
 
 
 Postopek dela:
 \begin{description}
 \item
 \end{description}
-
-\chapter{Primer LaTex kode} \label{dodatekB}
-
-\chapter{Vkljuèevanje slik v okolju LaTex} \label{dodatekC}
-
-\chapter{Instalacija programskih orodij za urejanje teksta v
-okolju LaTex } \label{dodatekD}
 
 \chapter{Predloge za navajanje literature - baza BibTex}
 \label{dodatekE}
