--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -130,6 +130,8 @@ Krmilni signal za krmiljenje motorjev pride iz servo krmilnika. Ta je odgovoren 
 \subsection{Komunikacija}
 Servo krmilnik ima dva prikljuèka za optiène kable, oddajni (Tx) ter sprejemni (Rx) signal. Komunikacijski protokol s katerim lahko z osebnim raèunalnikov komuniciramo do servo krmilnika je arcNET.
 
+Opiši odprtost!
+
 \subsection{Odprtost}
 
 \section{Senzor sile in navorov - JR3}
