--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -19,8 +19,8 @@
 \fakulteta{Fakulteta za elektrotehniko}
 \delo{Magistrsko delo}
 \date{Ljubljana, 2015}
-\mentor{prof. dr. Ime Priimek}
-%\somentor{prof. dr. Ime Priimek}
+\mentor{prof. dr. Aleš Ude}
+\somentor{dr. Leon Žlajpah}
 \begin{document}
 
 %------------------------ ZAÈETNI DEL -----------------------------------
@@ -106,53 +106,113 @@ The thesis addresses ...
 %*********************** OSREDNJA POGLAVJA ********************************
 
 %*********************** PA10 ********************************
-\chapter{Mehanska ter senzorska oprema} \label{oprema}
+\chapter{Robotski manipulator PA-10 in senzor sile JR3} \label{oprema}
 
-\section{Robotski manipulator PA10}
-Celotno delo, ki je bilo opravljeno pred pisanjem tega dela je bilo narejeno na robotskem mehanizmu Portable Arm - PA10, proizvajalca Mitsubishi Heavy Industries. Robotski mehanizem ima 7 sklepov, kar ga uvršèa v kategorijo redundantnih mehanizmov. Mehanizem ima sicer precej omejen delovni prostor, ima pa precej odprt servo krmilik. Odprtost v smislu, da nam omogoèa nastavljanja hitrosti in navore za vsak sklep posebej, omogoèa nam vklapljanje ali izklapljanje zavore ter vklop ali izklop posameznega motorja. Hkrati imamo tudi možnosti nastavljanja krmilniške EEPROM tabele, v kateri so shranjeni pomembni parametri vodenja motorjev, npr. ojaèanja regulatorjev. Robotski manipulator ima tudi prednost prenosljivosti, saj tehta le 36 Kg in je mogoèe ga hitro namestiti na drugi podstavek ali ga premakniti.
+\section{Robotski manipulator PA-10}
+Celotno delo, ki je v tem delu je bilo narejeno na robotskem mehanizmu Portable General Purpose Intellient Arm - PA10, proizvajalca Mitsubishi Heavy Industries. Gre za serijskega robota s sedmimi sklepi. Robotska roka tehta 36 kg in ima nosilnost 10 kg. Servo motorji v sklepih se napajajo preko izmeniène napetosti. Prenosi med v sklepih so realizirani s mehanizmom harmonic drive. Proizvajalec navaja, da lahko bazo robota pritrdimo v katerokoli lego. To pomeni, da ga lahko fiksiramo bodisi na tla, na stane ali na strop. Za namene tega dela je bila baza robota fiksirana na tla.
 
-Harmonic Drive!
 
-\subsection{Kinematièni model}
+\subsection{Denavitt - Hartemberg parametri za robotski manipulator PA-10}
 
-Robotski manipulator PA10 ima 7 stopenj prostosti. Sklepi so razvršèeni po antropomorfnih spklepih, da spominjajo na èloveško roko. Tako imamo 2 sklepa za ramo (S1 in S2), 2 sklepa za komolec (E1 in E2) ter 3 za zapestje (W1, W2 in W3). 
+Robotski mehanizem PA-10 ima 7 prostostnih stopenj razporejenih tako, da spominjajo na èloveško roko. Prvi trije sklepi so oznaèeni kot ramenskio sklepi (shoulder), S1, S2, S3. Naslednja dva sta oznaèena kot komolèni sklepi (elbow), E1, E2. Zadnja dva sklepa pa sta oznaèena kot zapestna (wrist), W1, W2. Ker ima robot veè kot 6 prostostnih stopenj ga uvršèamo med redundantne mehanizme. Vsi sklepi so rotacijski.
+
+Proizvajalec v dokumentaciji navaja zadostno kolièino podatkov, da lahko uporabnik sam zgradi kinematièen model robota. S poznavanjem razdalj in postavitev sklepov je moè definirati Denavit-Hartenberg (kasneje D-H parametri) parametre.
+
+\input{./Slike/arm_length.tex}
+
+\begin{table}
+\centering	
+
+	\begin{tabular}{l | l l l l l l}
+
+		 
+		\textit{i}	& $ \alpha_{i-1} $ & $a_{i-1}$ & $d_i$ & $ \theta_i $ \\
+		\hline
+		1			& 0 & 0 & 0.315 & \textit{q1} \\
+		2			& $-\frac{\pi}{2}$ & 0 & 0 & \textit{q2} \\
+		3			& $\frac{\pi}{2}$ & 0 & 0.45 & \textit{q3} \\
+		4			& $-\frac{\pi}{2}$ & 0 & 0 & \textit{q4} \\
+		5			& $\frac{\pi}{2}$ & 0 & 0.5 & \textit{q5} \\
+		6			& $-\frac{\pi}{2}$ & 0 & 0 & \textit{q6} \\
+		7			& $\frac{\pi}{2}$ & 0 & 0.08 & \textit{q7} \\
+	
+	
+	\end{tabular}
+  \caption{D-H parametri}
+  \label{dh_params} 
+\end{table}
+
+S pomoèjo D-H parametrov lahko definiramo geometrijski model robota oz. transformacijsko matriko $ A_{PA10} = A_1 \times A_2 \times ... \times A_7 $, ki nam preslika koordinate iz koordinatnega sistema baze ($ x_{base} $) v koordinatni sistem na vrhu robota($ x_{PA10} $) v odvisnosti od kotov v sklepih. 
+Tako velja relacija
+
+\begin{center}
+	$x_{PA10} = A_{PA10} \times x_{base}$
+\end{center}
+
+
+
 
 \input{./Slike/pa10-drawing.tex}
 
-Iz dokumentacije je moè razbrati kinematiène podatke robota ter s pomoèjo teh zgraditi Denavit-Hartemberg tabelo (kasneje D-H tabela). S pomoèjo tabele lahko nato opišemo kinematièni model robota. 
 
 
 \section{Servo Krmilnik} \label{servo}
 %*********************** SERVO KRMILNIK ********************************
-Krmilni signal za krmiljenje motorjev pride iz servo krmilnika. Ta je odgovoren za krmiljenje motorjev tako, da se vrtijo s referenèno hitrostjo ter da proizvajajo referenèni navor. Servo krmilnik je napajan iz omrežne napetosti 230 V / 50 Hz.
+Proizvajalec ob robotskem mehanizmu dostavi tudi krmilnik. V krmilniku je so štiri loèeni krmilniki za servo motorje. Vsak servo krmilnik krmili dva sklepa razen enega. Krmilnik omogoèa vodenje na dva naèina. Prvi naèin predvideva, da motorje krmilimo navorno, drugi pa hitrostno. Razlika je tudi v regulatorjih. Navorno krmiljenje je realizirano z analognim P regulatorjem toka, hitrostna regulacija pa je realizirana z digitalnim PI regulatorjem s frekvenco pribliæno 1500 Hz.
+
+Na zadnji strani krmilinka je stikalo s katerim lahko priklopimo med naèinom delovanj imenovanim "Teach Mode" ter "Run mode". Ko je krmilnik nastavljen na "Teach Mode" so hitrosti v sklepih omejene tako, da se lahko vrh robota premika s maksimalno hitrostjo 250 mm/s
+
+Ob vžigu krmilnika se parametri za vodenje robota naložijo iz EEPROM tabele v RAM. Med temi parametri so recimo tudi ojaèanje proporcionalnega ter integracijskega dela regulatorja, limite posameznih stopenj, razmerje prenosa zobnikov, itd.
+
+Referenène navore ali hitrosti v sklepih na servo krmilniku nastavljamo preko zunanjega vmesnika. Krmilnik ima ARCNET vmesnik, ki podpira serijsko komunikacijo po ARCNET protokolu. Krmilink ima loèen konektor za vhod (Rx) ter izhod (Tx). Uporabljena so optièna vodila.
+Za komunikacijo s servo krmilnikom je bil v namen tega dela narejen vmesnik, ki je podrobneje opisan v poglavju XXX.
 
 
-\subsection{Komunikacija}
-Servo krmilnik ima dva prikljuèka za optiène kable, oddajni (Tx) ter sprejemni (Rx) signal. Komunikacijski protokol s katerim lahko z osebnim raèunalnikov komuniciramo do servo krmilnika je arcNET.
+\subsection{Komunikacija z ARCNET vmesnikom}
 
-Opiši odprtost!
+ArcNET vmesnik na  krmilniku skrbi za komunikacijo med servo krmilniki ter visokonivojskim vmesniku. Dovoli hitrost komunikacije do 5 Mb/0.s Njegova naloga je interpretirati dobljene pakete, primerno nastaviti parametre na servo krmilniku ter posredovati primeren odgovor višjenivojskemu vmesniku.
+Ko višjenivojski vmesnik ne pošilja nobenih ukazov je ARCNET vmesnik v èakanju. V tem stanju èaka na primerno sestavljen paket. Vsak paket se zaène z veliko tiskano èrko zapisano v 8-bitnem ASCII formatu. Z razliènimi èrkami lahko izberemo razlièna stanja oz. naèine delovanja ARCNET vmesnika:
 
-\subsection{Odprtost}
+
+\begin{itemize}
+	\item Izpis EEPROM tabele
+	\item Vpis v EEPROM tabelo
+	\item Vpis v RAM tabelo
+	\item Kopiranje iz RAM v EEPROM tabelo
+	\item Postavitev kotov na nièelno vrednost	
+	\item Sporstitev zavor
+	\item Vodenje sklepov
+\end{itemize}
+
+Tako lahko uporabnik poljubno spremeni razne parametre, ki se uporabljajo za vodenje robota. Možno je na primer spremeniti ojaèanja PI regegulatorja, vendar se teh funkcionalosti v tem delu ni podrobneje raziskalo saj ni bilo potrebe po tem.
+
+V tem delu se je v veèini uporabljalo naèin za vodenje sklepov. Ta naèin se izbere tako, da se ARCNET vmesniku najprej pošlje ukaz, ki se zaène z velikim tiskanim S (ASCII DEC 65), nadaljuje se s pošiljanjem paketov, ki se zaènejo s veliko tiskano èrko C (ASCII DEC 67) ter zakljuèi s tem, da se pošlje paket, ki se zaène z velikim tiskanim E (ASCII 69). Pri tem naèinu delovanja je potrebno posvetiti nekaj pozornosti hitrosti pošiljanja, saj, èe paketi ne pridejo v intervalu specificiranem na krmilniku bo ARCNET vmesnik šel iz tega naèina delovanja nazaj na naèin èakanje.
+
+Paket, ki se zaène s C in nosi podatke o krmiljenju sklepov robota je velik 35 bajtov, 5 za vsak sklep. Prvi bajt je kontrolni in samo prvi trije  biti nosijo podatke o vodenju:
+
+\begin{enumerate}
+	\item vklop ali izklop mehanske zavore (1 - vklop, 0 - izklop)
+	\item vklop ali izklop servo motorja (1 - vklop, 0 - izklop)
+	\item izbira navornega ali hitrostnega naèina (1 - navorni, 0 - hitrostni)
+\end{enumerate}
+Drugi in tretji bajt nosijo podatek o referenènem navoru na sklepu. Ta podatek bo uporabljen le, èe je servo motor nastavljen na navorni naèin delovanja. Dvo bajtni podatek pa je v formatu 0.001 Nm/digit.
+Èetrti in peti bajt nosijo podatek o referenèni hitrosti na sklepu. Podatek je tako kot pri navornem delovanju v uporabi le, ko vodimo servo motor na hitrostnem naèinu. Dvo bajtni podatek je v formatu 0.0002 rad/s/digit.
+
+\input{./Slike/control_mode.tex}
+
 
 \section{Senzor sile in navorov - JR3}
 
+Za namene tega dela se je med vrhom robota ter prijemalom pritrdilo senzor sil JR3. Senzor nam omogoèa merjenje sil in navorov v X, Y in Z smeri. Sensor je narejen iz uporovnih listièev porazdeljenih po notranjosti. Iz specifikacij senzorja je razvidno, da uporablja 8 uporovnih listièev. S tem, ko na senzor deluje zunanja sila ali navor, se upornost na uporovnih listièih spremeni.
+Senzor sile JR3 ima v svoji notranjosti poleg uporovnih listièev še AD-pretvornik. Iz senzorja tako dobimo podatke o navoru v digitalnem zapisu. Senzor se navadno prikljuèi preko 6 ali 8 pinskega kabla na osebni raèunalnik, na katerem je kartica, ki skrbi za digitalno obdelavo signala. Kartice na osebnem raèunalniku so v ISA ali PCI izvedbi. Za potrebe tega dela se je uporabljala kartica na ISA vodilu. Na kartici je vezje za digitalno procesiranje signalov. V dokumentaciji kartice so opisani trije nizkoprepustni filtri z razliènimi mejnimi frekvencami. V tem delu se je uporabilo filter z mejno frekvenco 500 Hz.
 
-Mnogo krat želimo na vrhu robotskega mehanizma imeti senzor, ki nam pove kakšne sile delujejo na vrh. MV primeru tega dela se je uporabljal JR3 senzor sil in navorov. Senzor JR3 omogoèa merjenje sil ter navorov v vseh treh oseh (X, Y ter Z). Znotraj senzorja so uporovni mostièi. 
-Senzor se prikljuèi na osebni raèunalnik bodisi preko kartice na PCI vodilu ali kartice na ISA vodilu. Med delom je nastala programska oprema za branje sil ter navorov iz registrov DSP cartice, ki je na ISA vodilu. Kartica omogoèa osnovne filtre, ki so veèinoma nizkoprepustni. Vrednosti sil ter navorov dobimo tako, da preberemo vrednost iz registra želenega filtra ter pomnožimo s doloèeno konstanto.
-
-
-
-
-\begin{enumerate}
-\item 
-\end{enumerate}
 
 %*********************** ARCNET SERVER ********************************
-\chapter{arcNET strežnik} \label{arcnet}
+\chapter{ strežnik} \label{arcnet}
 
-V sklopu tega dela je nastal UDP - arcNET strežnik, ki skrbi za komunikacijo med servo krmilnikom ter programom za kontrolo. Strežniški program je nastal na operacijskem sistemu Linux ter v programskem jeziku C. Razlog za to je bila zahteva, da je èim bližje realnemu èasu - real time. Strežnik opravlja glavni program s frekvenco 500 Hz. 
+V prejšnjem poglavju so bile opisane mehanske in senzorne komponente, ki se jih je za to delo uporabljalo. V ta namen je nastala programska oprema, ki omogoèa komunikacijo med uporabniškim programom in krmilnikov robota. Cilj programske opreme je bil zagotoviti èasovno kritiène zahteve po delovanju s konstantno frekvenco ter enostavnost in prijazost do uporabnika. 
 
-\section{arcNET protocol}
+\section{ protocol}
 \section{Razlogi za strežnik}
 
 
