ARCNET and JR3 Server

--- a/literatura.bib
+++ b/literatura.bib
@@ -1,5 +1,30 @@
 
 
+%-------------------------- LITERATURA MAGISTRSKA --------------------------
+% web page citation
+@misc{arc_howto,
+	author = "Avery Pennarun",
+	title = "{Linux ARCnet HOWTO}",
+	howpublished = "Dosegljivo: \url{http://apenwarr.ca/arcnet/howto/index.html}",
+	note = "[Dostopano: 6. 17. 2015]"
+}
+
+@misc{jr3_doc,
+	author = "JR3, INC.",
+	title = "{JR3, DPS-based force sensor recveivers, software and installation manual}",
+	howpublished = "Dosegljivo: \url{http://apenwarr.ca/arcnet/howto/index.html}",
+	note = "[Dostopano: 6. 17. 2015]"
+}
+
+@book{mihelj_vodenje,
+	title={Vodenje robotov},
+	author={Mihelj, Matja\v{z} and Bajd, Tadej and Munih, Marko},
+	year={2011},
+	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
+	address = {Ljubljana}
+}
+
+%-------------------------- PREDLOGE ---------------------------------------
 
 @book{juvznivc1992diplomska,
   title={Diplomska naloga: napotki za izdelavo},
@@ -401,6 +426,8 @@
   howpublished = "Dosegljivo: \url{http://web.archive.org}",
   note = "[Dostopano: 19. 4. 2013]"
 }
+
+
 
 
 @ARTICLE{key,
