--- a/literatura.bib
+++ b/literatura.bib
@@ -24,6 +24,14 @@
 	address = {Ljubljana}
 }
 
+@book{mihelj_hapt,
+	title={Vodenje robotov},
+	author={Mihelj, Matja\v{z}},
+	year={2011},
+	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
+	address = {Ljubljana}
+}
+
 %-------------------------- PREDLOGE ---------------------------------------
 
 @book{juvznivc1992diplomska,
