--- a/literatura.bib
+++ b/literatura.bib
@@ -32,6 +32,15 @@
 	address = {Ljubljana}
 }
 
+@book{bajd_robotika,
+	title={Robotika},
+	author={Bajd, Tadej and Mihelj, Matja\v{z} and Lenar\v{c}i\v{c}, Jadran and Stanovnik, Ale\v{s} and Munih, Marko},
+	year={2008},
+	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
+	address = {Ljubljana}
+}
+
+
 %-------------------------- PREDLOGE ---------------------------------------
 
 @book{juvznivc1992diplomska,
